--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -18,4 +18,5 @@ jobs:
       uses: sphinx-notes/pages@v3
       with:
         documentation_path: source
+        requirements_path: source/requirements.txt
 
